--- a/nyarap_nanti/templates/create_collection.html
+++ b/nyarap_nanti/templates/create_collection.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="flex items-center justify-between gap-4">
-                    <a href="{% url 'wishlist_page' %}" 
+                    <a href="{% url 'nyarap_nanti:wishlist_page' %}" 
                        class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md 
                               shadow-sm bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 
                               focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
