--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,11 +15,9 @@
                    Home
                 </a>
                 <a href="#" class="nav-link">Community</a>
-                <a href="{% url 'wishlist_page' %}" class="nav-link {% if request.path == '/wishlist/' %}active{% endif %}">
+                <a href="{% url 'nyarap_nanti:wishlist_page' %}" class="nav-link {% if request.path == '/wishlist/' %}active{% endif %}">
                     Wishlist
-                </a>                
-                <a href="#" class="nav-link">Reviews</a>
-                <a href="#" class="nav-link">Wishlist</a>
+                </a>                                               
                 <a href="{% url 'reviews:show_reviews' %}" class="nav-link">Reviews</a>
             </div>
 
